syntax = "proto3";

package codehorse.mkube.job;

option go_package = "github.com/solodba/devcloud/mkube/apps/job";

// 导入外部包
import "apps/job/pb/job.proto";

// Job相关功能接口
service RPC {
    // 创建Job
    rpc CreateJob(CreateJobRequest) returns(Job);
    // 删除Job
    rpc DeleteJob(DeleteJobRequest) returns(CreateJobRequest);
    // 修改Job
    rpc UpdateJob(UpdateJobRequest) returns(Job);
    // 查询Job
    rpc QueryJob(QueryJobRequest) returns(JobSet);
    // 查询Job详情
    rpc DescribeJob(DescribeJobRequest) returns(CreateJobRequest);
}

// DeleteJobRequest结构体
message DeleteJobRequest {
    // @gotags: bson:"namespace" json:"namespace"
    string Namespace = 1;
    // @gotags: bson:"name" json:"name"
    string Name = 2;
}

// UpdateJobRequest结构体
message UpdateJobRequest {
    // @gotags: bson:"job" json:"job"
    CreateJobRequest Job = 1;
}

// QueryJobRequest结构体
message QueryJobRequest {
    // @gotags: bson:"namespace" json:"namespace"
    string Namespace = 1;
    // @gotags: bson:"keyword" json:"keyword"
    string Keyword = 2;
}

// DescribeJobRequest结构体
message DescribeJobRequest {
    // @gotags: bson:"namespace" json:"namespace"
    string Namespace = 1;
    // @gotags: bson:"name" json:"name"
    string Name = 2;
}